feat: setup auth database

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-# App DB (postgres)
-APP_DB_CONFIG_SOURCE=./config/db-app/postgresql.conf
-APP_DB_USER=root
-APP_DB_PASSWORD_FILE=/run/secrets/db-app-root-password
+# Auth DB (postgres)
+AUTH_DB_CONFIG_SOURCE=./configs/db-auth/postgresql.conf
+AUTH_DB_INIT_SOURCE= ./build/auth/init.sql
+AUTH_DB_USER=root
+AUTH_DB_PASSWORD_FILE=/run/secrets/db-auth-root-password
 AUTH_DB_HOST=auth_db
 AUTH_DB_PORT=5432
 AUTH_DB_NAME=auth
+
+# Secrets
+SECRET_DB_AUTH_ROOT_PASSWORD_FILE=./configs/db-auth/secrets/auth_db_root_password.txt
