--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,28 +11,44 @@ services:
       dockerfile: ./build/auth/Dockerfile
     ports:
       - 3000:3000
-  # # Database application service
-  # db-auth:
-  #   image: postgres:16.2-bookworm
-  #   # Restart policy for the container
-  #   restart: unless-stopped
-  #   # Size of /dev/shm
-  #   shm_size: 256mb
-  #   # Run following commands inside the container
-  #   command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
-  #   # Networks the service connects to
-  #   networks:
-  #     db-app:
-  #       aliases: ["${APP_DB_HOST?}"]
-  #   volumes:
-  #     - db-app-data:/var/lib/postgresql/data
-  #     - ${APP_DB_CONFIG_SOURCE?}:/etc/postgresql/postgresql.conf
-  #   env_file:
-  #     - ./config/env/db-app.env
-  #   healthcheck:
-  #     test: "pg_isready -U '${APP_DB_USER}' -d '${APP_DB_NAME}' || exit 1"
-  #     interval: 10s
-  #     timeout: 10s
-  #     retries: 5
-  #   secrets:
-  #     - db-app-root-password
+  
+  # Database application service
+  db-auth:
+    image: postgres:16.2-bookworm
+    # Restart policy for the container
+    restart: unless-stopped
+    # Size of /dev/shm
+    shm_size: 256mb
+    # Run following commands inside the container
+    command: ["postgres", "-c", "config_file=/etc/postgresql/postgresql.conf"]
+    # Networks the service connects to
+    networks:
+      db-auth:
+        aliases: ["${AUTH_DB_HOST?}"]
+    volumes:
+      - db-auth-data:/var/lib/postgresql/data
+      - ${AUTH_DB_CONFIG_SOURCE?}:/etc/postgresql/postgresql.conf
+      - ${AUTH_DB_INIT_SOURCE?}:/docker-entrypoint-initdb.d/db.sql
+    env_file:
+      - ./configs/db-auth/.env
+    healthcheck:
+      test: "pg_isready -U '${AUTH_DB_USER}' -d '${AUTH_DB_NAME}' || exit 1"
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    secrets:
+      - db-auth-root-password
+
+# Network definitions, specifying which networks are internal
+networks:
+  db-auth:
+    internal: true
+
+# Volume definitions for persistent data storage
+volumes:
+  db-auth-data: {}
+
+# Secret definitions for storing sensitive data
+secrets:
+  db-auth-root-password:
+    file: ${SECRET_DB_AUTH_ROOT_PASSWORD_FILE?}
