feat: setup calendar database

--- a/.env
+++ b/.env
@@ -7,5 +7,15 @@ AUTH_DB_HOST=auth_db
 AUTH_DB_PORT=5432
 AUTH_DB_NAME=auth
 
+# Calendar DB (postgres)
+CALENDAR_DB_CONFIG_SOURCE=./configs/db-calendar/postgresql.conf
+CALENDAR_DB_INIT_SOURCE= ./build/calendar/init.sql
+CALENDAR_DB_USER=root
+CALENDAR_DB_PASSWORD_FILE=/run/secrets/db-calendar-root-password
+CALENDAR_DB_HOST=calendar_db
+CALENDAR_DB_PORT=5432
+CALENDAR_DB_NAME=calendar
+
 # Secrets
 SECRET_DB_AUTH_ROOT_PASSWORD_FILE=./configs/db-auth/secrets/auth_db_root_password.txt
+SECRET_DB_CALENDAR_ROOT_PASSWORD_FILE=./configs/db-calendar/secrets/calendar_db_root_password.txt
