--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,10 @@ services:
       db-auth:
     ports:
       - 3001:3001
+    env_file:
+      - ./configs/auth/.env
+    secrets:
+      - db-auth-root-password
   
   gateway:
     build:
